style.css
body {
/* background-image: linear-gradient(to right, rgb(50, 139, 150),
 rgb(197, 110, 59)); */
background-image:url(./assets/elements/tile-Background2.jpeg);
}

.header {
    display: grid;
    grid-template-columns: 1fr 2fr;
    margin: 10 px;
    border-radius: 10px;
    background-image: url(./assets/elements/moroccanTileHeader.jpeg);
    background-repeat: repeat-x;
    opacity: .65;
    /* border: solid rgb(20, 132, 132); */
    text-align: left;
    height: 100px;
    padding: 25px;
    /* box-shadow: 20px 20px 20px; */
}

.container {
    display: grid;
    grid-template-columns: 1fr 2fr;
    background-image: url(./assets/elements/tile-Background2.jpeg);
    /* box-shadow: rgb(128, 128, 128) 20px 20px 20px; */
    border-radius: 10px;
   
    
}

.header h1 {
    font-family: Trebuchet;
    color: white;
    font-size: 40px ;
    font-weight: 500;
    margin-bottom: 10px;
    text-decoration: underline;
  
}

.home-about{
    margin-top: 20px;
    height: 50px;
    width: 400px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 20px;
   
}

.home-btn, .about-btn {
    border-radius: 10px;
    background-color: rgb(185, 225, 224);
    box-shadow: 7px 7px 8px;
    
    
}

.home-btn strong, .about-btn strong {
    font-size: 25px;
    font-family: 'Trebuchet';
    color: rgb(187, 77, 77);
    

}

.main {
    height: 550px;
    width:90%;
background-image: url(./assets/elements/moroccanArch2.jpeg);
background-repeat: repeat-x;
background-position: center;
/* background-attachment: fixed; */
/* background-size: cover; */
    background-size: contain;
    margin-top: 25px;
    margin-left: 50px;
    border-radius: 10px;
    box-shadow: 20px 20px 20px;
    /* border: solid red; */

   
}

#mainImage {
width: auto;
height: auto;
margin-top: 50px;
margin-left: 2%;
margin-right: auto;
object-fit: contain;
width: 95%;
height: 80%;
}

main h1 {
    color: white;
    margin-bottom: 2000px;
}

.select-quotes-aside {
    height: 550px;
    overflow: scroll;
    width: 100%;
    margin-right: 20px;
    background-image: url(./assets/elements/berberKilim.jpeg);
    opacity: 9;
    border-radius: 10px;
    box-shadow: 20px 20px 20px;

}

.select-quotes-aside p {
    color: yellow;
    text-decoration: underline;
}

#imageOptions{
    width: 120px;
    height: 20px;
   
    margin-bottom: 5%;
    
}


.footer {
    height: 100px;
    margin-top: 20px;
    margin-bottom: 20px;
    background-image: url(./assets/elements/moroccanTileFooter.jpeg);
        background-repeat: repeat-x;
        opacity: .65;
        border-radius: 10px;
        box-shadow: 20px 20px 20px;
}

.footer h1{
    color: white;
}

.selectImage{
margin-top: 20px;
margin-left: 20px;
}
#selectImageBtn {
    width: 120px;
    font-size: 15px;
        font-family: 'Trebuchet';
        color: rgb(187, 77, 77);
}



/* #selectImagesField {
    width: 40%;
    border-radius: 10px;
    
} */

